--- a/Bachelorarbeit/introduction.tex
+++ b/Bachelorarbeit/introduction.tex
@@ -3,14 +3,14 @@
 
 \section{Motivation}
 \label{sec:motivation}
-Im Rahmen des Forschungsprojektes AEROMET\_UAV wird nach Alternativen für den Einsatz von Wetterballons zur Wetter- und Klimamessung geforscht. Wetterballons liefern schon seit längerer Zeit wichtige Messdaten im Bereich der Atmosphärenmessung. Allerdings sind die Ballons den Umgebungseinflüssen wie Wind und Temperatur stark ausgesetzt. Die empfindlichen Außenhülle des Ballons erweist sich zudem als sehr anfällig gegenüber kleinen Beschädigungen, die ein vorzeitiges Platzen des Ballons verursachen können. Daher muss immer mit einer Abdrift und einem möglichen Fehlschlag der Mission gerechnet werden. Nicht zuletzt ist diese Art der Wetter- und Klimamessung wenig nachhaltig, da der Ballon bei jedem Einsatz unwiederbringlich zerstört wird. Dies erzeugt viele Kleinteile, die schwer wiederzufinden sind und somit eine Umweltbelastung darstellen. Ein weiterer Kostenfaktor entsteht durch den Verlust der zum Aufstieg benötigten Gase wie Wasserstoff oder Helium.\\
+Im Rahmen des Forschungsprojektes AEROMET\_UAV wird nach Alternativen für den Einsatz von Wetterballons zur Atmosphärenmessung geforscht. Wetterballons liefern schon seit längerer Zeit wichtige Messdaten im Bereich der Wetter- und Klimamessung. Allerdings sind die Ballons den Umgebungseinflüssen wie Wind und Temperatur ausgesetzt. Die empfindlichen Außenhülle des Ballons erweist sich zudem als sehr anfällig gegenüber kleinen Beschädigungen, die ein vorzeitiges Platzen des Ballons verursachen können. Daher muss immer mit einer Abdrift und einem möglichen Fehlschlag der Mission gerechnet werden. Nicht zuletzt ist diese Art der Wetter- und Klimamessung wenig nachhaltig, da der Ballon bei jedem Einsatz unwiederbringlich zerstört wird. Dies erzeugt viele Kleinteile, die schwer wiederzufinden sind und somit eine Umweltbelastung darstellen. Ein weiterer Kostenfaktor entsteht durch den Verlust der zum Aufstieg benötigten Gase wie Wasserstoff oder Helium.\\
 Als eine erfolgversprechende Alternative erweisen sich sogenannte Unmanned Airial Vehicle (UAV). Der Vorteil der UAV's liegt vor allem in ihrer Robustheit, der Steuerbarkeit und der einfachen Bedienung. Im März des Jahres 2018 veröffentlichte der Russe Denis Koriakin ein Video (rref einfügen),in dem er einen Steigflug eines \SI{1}{kg} schweren Quadrocopters auf eine Höhe von \SI{10}{km} zeigt. 
 % Dies verdeutlicht, dass solch ein Steigflug durchaus möglich ist. 
 
 \section{Stand der Technik}
 \label{sec:stand_der_technik}
 Die Bedeutung von unbemannten Fluggeräten in Bereichen wie der Paketzustellung, dem Aufnehmen von Bildern und Videos oder dem Beobachten der Umgebung ist kontinuierlich am Wachsen. Dabei weicht das Flugverhalten der elektrisch angetriebenen, unbemannten Fluggeräte von den konventionell mit Gasturbinen oder Kolbenmotor betriebenen Fluggeräten ab, da sich die Masse nicht durch die Verbrennung von Kraftstoff verringert. Außerdem wird die Wahl des Leistungsverhaltens und der Anforderungen an das Fluggerät stark durch die spezifische Auslegung dieser für konkrete Missionen beeinflusst. 
-Dazu gibt es eine steigende Anzahl an Untersuchungen, die sich mit dem Leistungsverhalten und der optimalen Auslegung von elektrischen, propellergetriebenen Flugsystemen beschäftigen (Quellen). In [Ostler] wird mithilfe von Flugversuchen die Flugzeugpolare von Modellflugzeugen ermittelt. Mit dieser wird im Anschluss die Flugleistung quantifiziert. Wiederum in [KARI] wird ein anderer Ansatz gewählt. Hier werden entscheidende Leistungs- oder Geometrieparameter der Motoren, Propeller, verschiedener Rahmen und Batterien in Abhängigkeit der Masse gesetzt. In einer anschließenden Trade-Off Untersuchung wird für eine gegebene Mission das optimale Fluggerät entwickelt. Datenbanken von Herstellern verwenden auch diverse Online Tools (ecalc, drivecalc, flyeval). Hier kann aus umfassenden Datenbanken oder durch manuelle Eingabe bekannter Daten das gewünschte Flugobjekt im Tool nachgebildet werden. Dazu werden das Flugobjekt generell, die Akkuzelle, der Motorregler, der Motor und der Propeller vom Anwender ausgewählt und spezifiziert. Anschließend berechnet das Programm das Flugverhalten und das gemeinsame Zusammenwirken aller Antriebskomponenten. ( … erste Auslegung …). Der Höheneinfluss auf das Leistungsverhalten wird in [PCUP] behandelt und wieder anhand von Flugversuchen validiert. Diese Flugversuche wurden auf unterschiedlichen Höhenniveaus durchgeführt. Dabei verweilte das Flugobjekt jeweils pro Versuch auf einem anderen Nivau. Im Anschluss werden die gemessenen Daten im Hinblick auf einen höheren Leistungsverbrauch in größeren Flughöhen ausgewertet. Einen elektrotechnischen Ansatz zur Beschreibung und Berechnung des elektrischen Antriebssystems sowie eines Multicopters als ganzen wird in [Quan, Chinesen, Stepanika] verwendet. Stepaniak bestimmt dabei unbekannte Konstanten aus seinem aufgestellten Modell mit Messdaten aus Flugversuchen. 
+Dazu gibt es eine steigende Anzahl an Untersuchungen, die sich mit dem Leistungsverhalten und der optimalen Auslegung von elektrischen, propellergetriebenen Flugsystemen beschäftigen (Quellen). In [Ostler] wird mithilfe von Flugversuchen die Flugzeugpolare von Modellflugzeugen ermittelt. Mit dieser wird im Anschluss die Flugleistung quantifiziert. Wiederum in [KARI] wird ein anderer Ansatz gewählt. Hier werden entscheidende Leistungs- oder Geometrieparameter der Motoren, Propeller, verschiedener Rahmen und Batterien in Abhängigkeit der Masse gesetzt. In einer anschließenden Trade-Off Untersuchung wird für eine gegebene Mission das optimale Fluggerät entwickelt. Datenbanken von Herstellern verwenden auch diverse Online Tools (ecalc, drivecalc, flyeval). Hier kann aus umfassenden Datenbanken oder durch manuelle Eingabe bekannter Daten das gewünschte Flugobjekt im Tool nachgebildet werden. Dazu werden das Flugobjekt generell, die Akkuzelle, der Motorregler, der Motor und der Propeller vom Anwender ausgewählt und spezifiziert. Anschließend berechnet das Programm das Flugverhalten und das gemeinsame Zusammenwirken aller Antriebskomponenten. ( … erste Auslegung …). Der Höheneinfluss auf das Leistungsverhalten wird in [PCUP] behandelt und wieder anhand von Flugversuchen validiert. Diese Flugversuche wurden auf unterschiedlichen Höhenniveaus durchgeführt. Dabei verweilte das Flugobjekt jeweils pro Versuch auf einem anderen Niveau. Im Anschluss werden die gemessenen Daten im Hinblick auf einen höheren Leistungsverbrauch in größeren Flughöhen ausgewertet. Einen elektrotechnischen Ansatz zur Beschreibung und Berechnung des elektrischen Antriebssystems sowie eines Multicopters als ganzen wird in [Quan, Chinesen, Stepanika] verwendet. Stepaniak bestimmt dabei unbekannte Konstanten aus seinem aufgestellten Modell mit Messdaten aus Flugversuchen. 
 Es zeigt sich, dass zunehmend mehr Untersuchungen zur Optimierung von Multicopterentwürfen gemacht werden. Auch das Leistungsverhalten wird verstärkt mit Blick auf eine Optimierung betrachtet. Für einen Steigflug auf \SI{10}{km} oder sogar \SI{15}{km} sind noch keine ausreichenden Untersuchungen gemacht worden. Der Höheneinfluss wurde zwar untersucht, allerdings bestand das Missionsprofil aus einem Flug auf konstanter Höhe. Dies beinhaltet nicht die zusätzliche Leistung, die zum Steigen benötigt wird. Zudem fehlt bisher die Untersuchung des Einflusses verschiedener Parameter des Flugsystems auf das Steigvermögen oder die damit maximal erreichbare Höhe. Die Online Tools erweisen sich als nützliche Hilfe, wenn es darum geht eine Vorabauslegung des gewünschten Flugsystems, v.a. des Antriebsstrangs, zu erstellen. Allerdings kann damit nicht das Flugverhalten an sich bestimmt werden. Weiterhin sind die zugrunde gelegten Modelle nicht einsehbar. Einen bisher unbestätigten Steigflug auf mehr als \SI{10}{km} ist [Koriakin] in Russland im Mai 2018 gelungen. 
 
 
