--- a/Bachelorarbeit/projektmanagement.tex
+++ b/Bachelorarbeit/projektmanagement.tex
@@ -171,7 +171,7 @@
 
   \ganttgroup{AP 2000: Programmaufbau}{2018-12-05}{2018-12-20}\\
   \ganttbar  {AP 2100: Erstellung eines Modells in Matlab}{2018-12-05}{2018-12-17}\\
-  \ganttlinkedbar [link type=rdldr, link mid = 0.6, link bulge = 3] {AP 2200: Struktogramm}{2018-12-18}{2018-12-20}\\
+  \ganttlinkedbar [link type=rdldr, link mid = 0.6, link bulge = 3] {AP 2200: Struktogramm}{2018-12-14}{2018-12-20}\\
 
   \ganttgroup{AP 3000: Überprüfung und Valdierung des Programms}{2018-12-21}{2018-12-28}\\
   \ganttbar  {AP 3100: Modellierung eines Quadrocopterfluges im Programm}{2018-12-21}{2018-12-22}\\
@@ -294,7 +294,7 @@
 % WPD 2200
 
 \clearpage
-\begin{wpd}{AP 2200}{Struktogramm}{1.0}{Lucas Schreer}{26.11.2018}{18.12.2018}{20.12.2018}{3 Tage}{Lucas Schreer}
+\begin{wpd}{AP 2200}{Struktogramm}{1.0}{Lucas Schreer}{26.11.2018}{14.12.2018}{20.12.2018}{7 Tage}{Lucas Schreer}
     {
     \textbf{Ziele:}
     \begin{itemize}
@@ -311,10 +311,12 @@
     \textbf{Aufgaben:}
     \begin{itemize}
         \item Erstellen eines Struktogramms für die einzelnen Programmabläufe
+        \item Überprüfung des Programmablaufs auf Optimierungspotenzial
     \end{itemize}
     \textbf{Ergebnisse:}
     \begin{itemize}
         \item Strukturiertes Ablaufdiagramm, welches die entsprechenden Abläufe ohne Quelltext darstellt
+        \item Optimierung der Programmablaufstruktur
     \end{itemize}
     }
 \end{wpd}
@@ -376,7 +378,6 @@
     \textbf{Ergebnisse:}
     \begin{itemize}
         \item Aussagen zur Validität des aufgestellten Modells
-        \item Kenntnis über die 
     \end{itemize}
     }
 \end{wpd}
